# mylua

./: .clang-format  CMakeLists.txt  README.md  test.lua
.cache/clangd/index/: lapi.c.029903FA248E03C5.idx  lapi.h.6E42EDA31FE99FEF.idx  lauxlib.c.56A73A421553C309.idx  lauxlib.h.6A4EC8195E5CCDD5.idx  lbaselib.c.C49F5065950A2ED2.idx  lcode.c.A42D4C281542AC14.idx  lcode.h.1363B48EE5FC0C41.idx  lcorolib.c.51D68A78266194B6.idx  lctype.c.E853D89BF6B3F5C8.idx  lctype.h.85A3DABAAD9C17E9.idx  ldblib.c.0C062B3D97E625F5.idx  ldebug.c.EDD05CFE1168A14B.idx  ldebug.h.68D8CA5BD73BD498.idx  ldo.c.25F1F28B0DB33284.idx  ldo.h.9F653A497119F0C7.idx  ldump.c.C78624C2DD6EF520.idx  lfunc.c.18E12A763CF12833.idx  lfunc.h.D5E8FFCCF91CA4C8.idx  lgc.c.E5834FCADC1A99A7.idx  lgc.h.7141F212CC74D3D3.idx  linit.c.84C3DD995C0C4BF0.idx  liolib.c.7D103B91E8FBD0ED.idx  llex.c.59318F750B000C5F.idx  llex.h.E8D0016D4C669674.idx  llimits.h.BD228136742D82E5.idx  lmathlib.c.9B0036416606D33D.idx  lmem.c.C322A7CCA992FF1A.idx  lmem.h.C7C50B5DCC5B3704.idx  loadlib.c.03015BEB1ACB2F1B.idx  lobject.c.4670D468D863368D.idx  lobject.h.EFC0620C37B5EAC6.idx  lopcodes.c.796DD9ACD21C0971.idx  lopcodes.h.894872992697743E.idx  lopnames.h.BA540912E9261B3E.idx  loslib.c.E2D8D39269D7356D.idx  lparser.c.42B73E8CAFA732CD.idx  lparser.h.32BFC7929EA254F1.idx  lprefix.h.DBB5724FEE2EDDC6.idx  (+22 more)
src/: lapi.c  lauxlib.c  lbaselib.c  lcode.c  lcorolib.c  lctype.c  lctype.h  ldblib.c  ldebug.c  ldo.c  ldump.c  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  llex.h  lmathlib.c  lmem.c  loadlib.c  lobject.c  lopcodes.c  loslib.c  lparser.c  lstate.c  lstring.c  lstrlib.c  ltable.c  ltablib.c  ltm.c  lua.c  luac.c  lundump.c  lutf8lib.c  lvm.c  lzio.c
